--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.6",
+    "@react-native-community/netinfo": "^9.0.0",
+    "@react-native-picker/picker": "^2.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "amazon-cognito-identity-js": "^5.2.9",
+    "aws-amplify": "^4.3.24",
+    "aws-amplify-react-native": "^6.0.4",
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-hook-form": "^7.31.2",
@@ -20,6 +26,7 @@
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-spinkit": "^1.5.1",
     "react-native-vector-icons": "^9.1.0",
     "validator": "^13.7.0"
   },
